tests/paczka1/small_fuzzy/97640335.err
Error in line 1: TSd A543 57,6
Error in line 10: eQtGmvvCE6 S571 15,3
Error in line 11: eQtGmvvCE6 A543 46,8
